<resources>
    <string name="app_name">MedStore</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="product">Product</string>
    <string name="supplier">Supplier</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="no_have_account">Didn`t Have Account? <b><font color='#D7B05C'>Register</font></b></string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="id_product">Product Id</string>
    <string name="detail_product">Detail Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="id_supplier">Supplier Id</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_address">Supplier Address</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="stock">Stock</string>
    <string name="submit">Submit</string>
    <string name="add_product">Add Product</string>
    <string name="fab_product">Fab Product</string>
    <string name="fab_supplier">Fab Supplier</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="detail_supplier">Detail Supplier</string>
</resources>