<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.product.detail.DetailProductFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/material_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center_vertical"
            android:text="@string/detail_product"
            android:textColor="@color/black"
            android:textSize="@dimen/header" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/material_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_id_product"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:enabled="false"
                android:focusableInTouchMode="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_id"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/id_product"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/til_id_product"
                app:placeholderTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_name"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/product_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_stock"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/til_product_name"
                app:placeholderTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_stock"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/stock"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/til_stock"
                app:placeholderTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_price"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_supplier_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/til_price"
                app:placeholderTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_supplier_name"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/supplier_name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_supplier_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:focusableInTouchMode="false"
                app:layout_constraintTop_toBottomOf="@id/til_supplier_name"
                app:placeholderTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_supplier_address"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/supplier_address"
                    android:inputType="text"
                    android:textSize="@dimen/content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_supplier_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:focusableInTouchMode="false"
                app:layout_constraintTop_toBottomOf="@id/til_supplier_address"
                app:placeholderTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_supplier_phone_number"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/supplier_phone_number"
                    android:inputType="number"
                    android:textSize="@dimen/content" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingBottom="32dp"
                app:layout_constraintTop_toBottomOf="@id/til_supplier_phone_number">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete"
                    style="@style/ThemeOverlay.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/gray"
                    app:layout_constraintEnd_toStartOf="@+id/btn_update"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_update"
                    style="@style/ThemeOverlay.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_delete"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>